app_zrpp_ebg/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ebg-ingress
  namespace: test
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: ebg.sihai.com                           ##虚拟主机名称
    http:
      paths:
      - path: /
        backend:
          serviceName: app-ebg
          servicePort: 9979
